# pwdmanager-qt

./: .gitignore  CHANGELOG.md  README.md  askuserpassword.cpp  configure.ac  createuser.cpp  createuser.h  credentialsfile.h  database.cpp  includes.h  main.cpp  mainwindow.cpp  mainwindow.h  minigeneratebox.cpp  minigeneratebox.h  misc.cpp  password.cpp  pwdmanager-qt.pro  pwdmanager-qt_resource.rc  seed.cpp
src/: Makefile.am  askuserpassword.cpp  auth.cpp  createuser.cpp  createuser.h  credentialsfile.cpp  credentialsfile.h  database.cpp  help.cpp  help.h  includes.h  main.cpp  mainwindow.cpp  mainwindow.h  minigeneratebox.cpp  minigeneratebox.h  misc.cpp  password.cpp  pwdmanager-qt.pro  resources.qrc  seed.cpp
src/help/en/: create.html  importexport.html  index.html  misc.html  modify.html  search.html
src/help/fr/: create.html  importexport.html  index.html  misc.html  modify.html  search.html
src/translations/: pwdmanager-qt_fr.qm  pwdmanager-qt_fr.ts
translations/: pwdmanager-qt_fr.qm  pwdmanager-qt_fr.ts
